# city-el

./: .gitignore  Makefile  README.md
.github/actions/build-pages/: action.yml
.github/workflows/: pages-deployment.yaml  pages-preview.yaml
DCDC-CityCom-80501HF/: Makefile  README.md
GfE-BMS/: Makefile  README.md
electronics/: README.md
electronics/DCDC-CityCom-80501HF/: .gitignore  Makefile  README.md
electronics/GfE-BMS/: .gitignore  Makefile  README.md
mechanics/: README.md
mechanics/drive-axle/: README.md
mechanics/drive-axle/doc/: README.md  axle-drawing.html
mechanics/drive-axle/doc/dimensions/: README.md
mechanics/drive-axle/model/: .gitignore  Makefile  README.md  pyproject.toml
mechanics/drive-axle/model/src/cityel_drive_axle_model/: __init__.py  _edit.py  din.py  export.py  keyway.py  spline_cutter.py  workplane.py
pr-preview/pr-1/: .gitignore
pr-preview/pr-1/DCDC-CityCom-80501HF/: schematic.kicad_sch
pr-preview/pr-1/GfE-BMS/: Makefile  README.md  board-schematic.kicad_sch
tools/: svg_embed_images.py
util/: pdf-highlight.html
